Fix styling when no runs. #27

--- a/app/client/styles/partials/_list.scss
+++ b/app/client/styles/partials/_list.scss
@@ -33,7 +33,10 @@
         width: $space/3;
       }
       &.error:before {
-        background: $red;
+        background: $blue;
+      }
+      &.inactive:before {
+        background: $white;
       }
     }
     .header {
