--- a/app/client/styles/partials/_base.scss
+++ b/app/client/styles/partials/_base.scss
@@ -1,3 +1,10 @@
+html,
+body,
+#js-main,
+#app {
+  height: 100%;
+}
+
 body {
   background: $light;
 }
@@ -28,7 +35,7 @@ body {
 }
 
 .loading {
-  // @include loading;
+  @include loading;
 }
 
 .credit {
@@ -43,4 +50,9 @@ body {
       color: $primary;
     }
   }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
