--- a/app/client/styles/partials/_list.scss
+++ b/app/client/styles/partials/_list.scss
@@ -53,7 +53,7 @@
         margin: 0 0 $space/6;
       }
       .run {
-        margin-right: $space/4;
+        margin-right: $space/2;
         margin-top: -$space/6;
       }
       .empty {
@@ -65,19 +65,12 @@
         @include tooltip;
         &:before {
           margin: 0 $space/8 0 0;
-          opacity: 0.2;
-          @include transition-property(opacity, transform);
+          @include transition-property(transform);
           @include transition-duration($ease);
         }
         &:hover {
           &:before {
-            opacity: 1;
             @include transform(scale(1.3));
-          }
-        }
-        &:first-child {
-          &:before {
-            opacity: 1;
           }
         }
       }
