Add vars to "Pipeline started" message. Minor improvements.

--- a/pipelines/api/templates/login.html
+++ b/pipelines/api/templates/login.html
@@ -10,7 +10,7 @@
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='viewport' content='width=device-width, initial-scale=1'/>
   <meta name='keywords' content='iconset, icons, design, lineart'/>
-  <meta name='description' content='A simple SASS/Bourbon boilerplate'>
+  <meta name='description' content='A simple automation tool'>
 
 
   <link rel='apple-touch-icon' sizes='180x180' href='/assets/favicons/apple-touch-icon.png'>
