Improve UI fetching logic. Fix bash coloring.

--- a/app/client/styles/partials/_base.scss
+++ b/app/client/styles/partials/_base.scss
@@ -56,3 +56,57 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.black {
+  color: black;
+}
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+.brown {
+  color: brown;
+}
+
+.blue {
+  color: blue;
+}
+.cyan {
+  color: cyan;
+}
+.purple {
+  color: purple;
+}
+.light-gray {
+  color: gray;
+}
+.dark-gray {
+  color: gray;
+}
+.light-red {
+  color: red;
+}
+.light-green {
+  color: green;
+}
+.yellow {
+  color: yellow;
+}
+.light-blue {
+  color: blue;
+}
+.dark-gray {
+  color: gray;
+}
+.white {
+  color: white;
+}
+.light-purple {
+  color: purple;
+}
+.light-cyan {
+  color: cyan;
+}
