--- a/app/server/views/layout.ejs
+++ b/app/server/views/layout.ejs
@@ -14,7 +14,7 @@
     <% if (env.production) { %>
       <script async src="<%= env.assets.main2.js %>">1</script>
     <% } else { %>
-      <script src="http://localhost:3000/client/main2.js">2</script>
+      <script src="http://localhost:3000/client/bundle.js">2</script>
     <% } %>
   </body>
 </html>
