--- a/app/server/views/layout.ejs
+++ b/app/server/views/layout.ejs
@@ -12,9 +12,9 @@
     <section id="js-main" class="content"></section>
 
     <% if (env.production) { %>
-      <script async src="<%= env.assets.main.js %>">1</script>
+      <script async src="<%= env.assets.main2.js %>">1</script>
     <% } else { %>
-      <script src="http://localhost:3000/client/main.js">2</script>
+      <script src="http://localhost:3000/client/bundle.js">2</script>
     <% } %>
   </body>
 </html>
