simplify dev server
merge express at 3001 and dev-server at 3000 into one dev-server

--- a/app/server/views/layout.ejs
+++ b/app/server/views/layout.ejs
@@ -14,7 +14,7 @@
     <% if (env.production) { %>
       <script async src="<%= env.assets.main2.js %>">1</script>
     <% } else { %>
-      <script src="<%= env.devServerURL %>/client/bundle.js">2</script>
+      <script src="/client/bundle.js">2</script>
     <% } %>
   </body>
 </html>
