--- a/app/client/styles/partials/_modal.scss
+++ b/app/client/styles/partials/_modal.scss
@@ -7,8 +7,8 @@
   right: 0;
   text-align: center;
   top: 0;
-  @include transition-property(opacity);
-  @include transition-duration($ease);
+  transition-property: (opacity);
+  transition-duration: ($ease);
   visibility: hidden;
   z-index: 1000;
   &.active {
@@ -31,10 +31,10 @@
   text-align: left;
   width: 50%;
   z-index: 3000;
-  @include animation(slide 0.2s ease);
-  @include transition-property(width);
-  @include transition-duration($ease);
-  @include keyframes(slide) {
+  animation: (slide 0.2s ease);
+  transition-property: (width);
+  transition-duration: ($ease);
+  @keyframes slide {
     0% {
       margin-top: 0;
     }
