--- a/pipelines/api/templates/login.html
+++ b/pipelines/api/templates/login.html
@@ -39,14 +39,14 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
   <div id="login">
 
     {% if not login_type %}
-    <form action="/login" method="post">
+    <form action="{{ prefix }}/login" method="post">
       <h1>No login required</h1>
       <a class="button primary" href="/">Go to homepage</a>
     </form>
     {% end %}
 
     {% if login_type == 'static' %}
-    <form action="/login" method="post">
+    <form action="{{ reverse_url('login') }}" method="post">
       <h1>Log in</h1>
       {% if error_msg %}
         <div class="notification warning">{{ error_msg }}</div>
@@ -66,7 +66,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
     {% if login_type == 'gh' %}
     <form>
       <h1>Log in</h1>
-      <a class="button primary" href="/ghauth?next=/">GitHub Login</a>
+      <a class="button primary" href="{{ ghauth_url }}">GitHub Login</a>
     </form>
     {% end %}
 
